Fix upper/lowercase in method and class names. Replace new Integer by Integer.valueOf()
git-svn-id: https://jcae.svn.sourceforge.net/svnroot/jcae/trunk@979 9c4724a3-da1e-0410-bc68-88f18da35cd4